--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 </marquee>
 </div>
      <hr>
+     <div class="box-56"> 
+        <h2 class="dep-78">NOTICES</h2>
+<marquee direction="down" scrollamount="4" scrolldelay="3">
+<h6 class="dep-1"><sup class="dep">new</sup>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
+<br>
+<h6  class="dep-1"><sup class="dep">new</sup> 12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded</h6>
+     </marquee> 
+    </div>
+     <hr>
      <div class="container">
         <div class="row">
             <div class="col-6 adiv"><a href="index.html">home section</a></div>
@@ -170,6 +179,21 @@
       }    
       a:hover{
         color:darkslategray;
+      }
+      .dep-1{
+        color: white;
+        background-color: black;
+      }
+      .dep{
+        color: red;
+      }
+      .box-56{
+        background-color: black;
+      }
+      .dep-78{
+        background-color:chartreuse;
+        color: azure;
+        text-align: center;
       }
     </style> 
 </html>
