--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
         <span style='font-size:100px;'>&#9759;</span>
 </marquee>
 </div>
-     <hr>
      <div class="box-56"> 
         <h2 class="dep-78">NOTICES</h2>
-<marquee direction="down" scrollamount="4" scrolldelay="3">
+<marquee direction="down" scrollamount="3" scrolldelay="3">
 <h6 class="dep-1"><sup class="dep">new</sup>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
-<br>
+<hr>
 <h6  class="dep-1"><sup class="dep">new</sup> 12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded</h6>
      </marquee> 
     </div>
@@ -77,8 +76,8 @@
             second for all type of question paper related to school</h4>  
             <hr>
             <h1>College Section</h1>
-            <h4>College section also conatin two parts:
-                <br> first for notes and second for all type of questions paper </h4>
+            <h4>College section  conatin four parts:
+                <br> first for notes and second for all type of questions paper and third fot practical and last for assignment </h4>
     <hr>    
     </div>
             </div>
