--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 <hr>
     <div class="y"> 
     <marquee direction="right" scrollamount="5" scrolldelay="3"> 
-        <h2>HOME SECTION</h2>     
-        <span style='font-size:100px;'>&#9759;</span>
+        <h2 <style'font-size:100px;'>&#9749;</style>HOME SECTION</h2>     
 </marquee>
 <hr>
 </div>
