--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
          background-color:dimgrey;
        }
     body{
-            background: linear-gradient(52deg,green,black,yellow,red,blue,white,pink);
+            background: linear-gradient(-52deg,green,yellow,red,darkslategray,white,pink),darkorchid;
             background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
         }  
