--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -21,6 +21,8 @@
                   </div>
     </div>
     <hr>
+    <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
+    <hr>
     <marquee direction="left" scrollamount="4" scrolldelay="3">
         <h2 <style'font-size:100px;'>&#9749;</style>COLLEGE SECTION</h2>
     </marquee>
@@ -97,7 +99,20 @@
     </div>
     <style>
         body{
-            background-color: gold;
+            background: linear-gradient(-52deg,purple,yellow,darkorchid,darkslategray,white,pink,darkorchid);
+            background-size: 400% 400%;
+            animation: bg 12s ease-in-out infinite;
+        }  
+        @keyframes bg{
+          0%{
+            background-position: 0% 50%;
+          }
+          50%{
+            background-position: 100% 100%;
+          }
+          100%{
+            background-position: 0% 50%;
+          }
         }
         .row-2{
             background-color: whitesmoke;
@@ -110,6 +125,18 @@
         }
         .dep{
             color: red;
+        }
+        .nav-link{
+            color: purple;
+        }
+        .nav-link:hover{
+            color: aqua;
+        }
+        .shalu{
+            color: aquamarine;
+        }
+        .row{
+            background-color: brown;
         }
     </style>
 </body>
