--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       }   
       .tab-content{
         background-color: slategray;
-        color: aliceblue;
+         
       }  
        #contact{
         color: honeydew;
@@ -205,6 +205,12 @@
         background-color:chartreuse;
         color: azure;
         text-align: center;
+      }
+      .nav-link{
+        color: purple;
+      }
+      .nav-link:hover{
+        color: blanchedalmond;
       }
     </style> 
 </html>
