--- a/notes.html
+++ b/notes.html
@@ -49,8 +49,20 @@
         background-color: cornsilk;
      }
     body{
-        background-color: dimgrey;
-        color: white;
+        background: linear-gradient(-52deg,green,yellow,red,darkslategray,purple,pink),darkorchid;
+            background-size: 400% 400%;
+            animation: bg 12s ease-in-out infinite;
+        }  
+        @keyframes bg{
+          0%{
+            background-position: 0% 50%;
+          }
+          50%{
+            background-position: 100% 100%;
+          }
+          100%{
+            background-position: 0% 50%;
+          }
     }
     .row{
         background-color: black;
