--- a/notes.html
+++ b/notes.html
@@ -21,6 +21,8 @@
                 </div>
  </div>
  <hr>
+ <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
+ <hr>
  <iframe width="350px" height="250px" style="border:0;" scrolling="no" src="https://go.screenpal.com/player/cTVr2anf2US?title=0&controls=1&share=1&download=1&embed=1&cl=1&width=1280&height=720&overlays=1&ff=1" autoplay"; allowfullscreen="true"></iframe>
  <hr>
  <marquee direction="left" scrollamount="4" scrolldelay="3">
@@ -90,6 +92,9 @@
    }
    th{
     color: brown;
+   }
+   .shalu{
+    color: chartreuse;
    }
  </style>
 </body>
