--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <marquee class="mar">
         <h2 <style'font-size:100px;'>&#9749;</style>YOU ARE MOST WELCOME TO VISIT ON MY WEBSITE </h2>
     </marquee>
+    <hr>
     <a class="problems" href="https://docs.google.com/document/d/15QSNMr92TIbiLUUsbnFbsUIlPTYeG_eLw_7hRuVbmYo/edit?usp=drivesdk">write yours problems with your phoneno.,name,email so that i can contact you</a>
     <hr> 
     <br>  
@@ -215,7 +216,7 @@
       }
       .problems{
         background-color: black;
-        color: red;
+        color: gold;
         font-size: x-large;
       }
     </style> 
