--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         color: blanchedalmond;
       }
       .problems{
-        background-color: black;
+        background-color: white;
         color: gold;
         font-size: x-large;
       }
