--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <h1>home section</h1>
                <h4>Home section contains three parts:
                 <br>first for videos ,videos will be entertainment,motivational,thought<br>study related<br>second for section details ,which we have already discussed in section details and third for contact ,onecan contact me on whatshap or email
-               </h4>    
+  and you can write your problems ,then i will suggest you</h4>    
                      <hr>
                 <h1>random notes</h1>
         <h4> random notes will conatin all general notes  for incresaing knowlege</h4>
@@ -86,7 +86,7 @@
             <hr>
             <a  href="mailto:deepaksinghal200511@gmail.com" <i class="fa-duotone fa-solid fa-envelope fa-shake"></i><b class="jyoti">contact on mail</b></a>
            <hr>
-           <a class="problems" href="https://docs.google.com/document/d/15QSNMr92TIbiLUUsbnFbsUIlPTYeG_eLw_7hRuVbmYo/edit?usp=drivesdk">write yours problems with your phoneno.,name,email so that i can contact you</a>
+           <a class="problems" href="https://docs.google.com/document/d/15QSNMr92TIbiLUUsbnFbsUIlPTYeG_eLw_7hRuVbmYo/edit?usp=drivesdk">write yours problems  and i will help you/suggest you</a>
            <hr> 
         </div>
     </div>
@@ -214,8 +214,7 @@
         color: blanchedalmond;
       }
       .problems{
-        background-color: white;
-        color: gold;
+        color: white;
         font-size: x-large;
       }
     </style> 
