--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <hr>
             <a  href="mailto:deepaksinghal200511@gmail.com" <i class="fa-duotone fa-solid fa-envelope fa-shake"></i><b class="jyoti">contact on mail</b></a>
            <hr>
-           <a class="problems" href="https://docs.google.com/document/d/15QSNMr92TIbiLUUsbnFbsUIlPTYeG_eLw_7hRuVbmYo/edit?usp=drivesdk">write yours problems  and i will help you/suggest you</a>
+           <a class="problems"  href="https://docs.google.com/document/d/15QSNMr92TIbiLUUsbnFbsUIlPTYeG_eLw_7hRuVbmYo/edit?usp=drivesdk">write yours problems  and i will help you/suggest you</a>
            <hr> 
         </div>
     </div>
@@ -174,7 +174,7 @@
         color: honeydew;
        }
        .shalu{
-        color: orangered;
+        color: white;
         height: 40px;
        }
       .jyoti{
