--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -73,7 +73,7 @@
 </tr>
 <tr>
     <td>1</td>
-    <td>12th Maths practical(<sup class="dep">1sem.2025</sup>)</td>
+    <td>BCA<sup class="dep">1st sem.</sup>Maths practical(<sup class="dep">1sem.2025</sup>)</td>
     <td><a href="https://drive.google.com/file/d/10ZxCzO0zt5GQfrt6PQMeL9iiur2NRFiu/view?usp=drivesdk">download</a></td>
 </tr>
 </table>
