--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
      <div class="box-56"> 
         <h2 class="dep-78">NOTICES</h2>
 <marquee direction="down" scrollamount="3" scrolldelay="5">
-<h6 class="dep-1"><sup class="dep">new</sup>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
+  <h6 class="dep-1"><sup class="dep">new</sup>NOW,You can see/download all files/documents/pdf/practical/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
+  <hr>
+  <h6 class="dep-1"><sup class="dep">new</sup>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
 <hr>
 <h6  class="dep-1"><sup class="dep">new</sup> 12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded</h6>
 <hr>
