--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -87,10 +87,17 @@
                     <td>12th model paper-2025<br>(Physics,Chemistry,Maths,<br>Biology)</td>
                     <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
                 </tr>
+                <tr> 
                 <td>4</td>
                 <td>12th Modelpaper-2025<br>(history,fine art,geography,<br>political science,)</td>
                 <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
-         </table>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>12th previous year question paper-chemistry<sup class="rd">2024-march</sup></td>
+                <td><a href="https://drive.google.com/file/d/12DdqkGX3EGkuP1H4jRNdmA5jSdRie4Pu/view?usp=drivesdk">download</a></td>
+            </tr>
+            </table>
     </div>
 </div>
 </div>
@@ -189,6 +196,9 @@
     color: purple;
  }
  .shalu{
+    color: red;
+ }
+ .rd{
     color: red;
  }
 </style>
