--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -95,7 +95,7 @@
             <tr>
                 <td>5</td>
                 <td>12th previous year question paper-chemistry<sup class="rd">2024-march</sup></td>
-                <td><a href="https://drive.google.com/file/d/12DdqkGX3EGkuP1H4jRNdmA5jSdRie4Pu/view?usp=drivesdk">download</a></td>
+                <td><a class="deepak2005" href="https://drive.google.com/file/d/12DdqkGX3EGkuP1H4jRNdmA5jSdRie4Pu/view?usp=drivesdk">download</a></td>
             </tr>
             </table>
     </div>
