--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <hr>
   <h6 class="dep-1"><sup class="dep">new</sup>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
 <hr>
-<h6  class="dep-1"> class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded</h6>
+<h6  class="dep-1"> 12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded</h6>
 <hr>
 <h6 class="dep-1"><sup class="dep">new</sup>Complete website and its contents updated</h6>    
 <hr>
