--- a/notes.html
+++ b/notes.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <span id="hours">00</span>                 
+                        <span id="dots">:</span>
+                        <span id="minutes">00</span>                    
+                            <span id="period">PM</span>
+                            <span id="seconds">00</span>
+                            <hr>
     <div class="container">
         <div class="row">
             <div class="col-6 adiv"><a href="index.html">home section</a></div>
@@ -38,6 +44,22 @@
     <td><a class="ab" href="https://drive.google.com/file/d/1DDV_4KAcGlkuNbJb0_g8b7JOhO_iZlRM/view?usp=drivesdk">download</td>
   </table>
  <style>  
+   #hours{
+            color: red;
+            font-size: xx-large;
+         }
+         #minutes{
+            color: brown;
+            font-size: x-large;
+            font-style: unset;
+         }
+         #seconds{
+            color: darkkhaki;
+            font-size: 17px;
+         }
+         #period{
+            color: chartreuse;
+         }
      .card-1{
         background-color: cadetblue;
         color: black;
@@ -49,7 +71,7 @@
         background-color: cornsilk;
      }
     body{
-        background: linear-gradient(-52deg,green,yellow,red,darkslategray,purple,pink),darkorchid;
+        background: linear-gradient(-52deg,green,darkslategray,purple,pink),darkorchid;
             background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
         }  
@@ -95,5 +117,30 @@
     color: chartreuse;
    }
  </style>
+ <script>
+       function clock(){
+let hours=document.getElementById('hours');
+let minutes=document.getElementById('minutes');
+let second=document.getElementById('second');
+let period=document.getElementById('period');
+
+let h=new Date().getHours();        
+let m=new Date().getMinutes();  
+let s=new Date().getSeconds();  
+
+let ampm= h>=12 ? "PM" :"AM";
+
+h=(h<10) ? "0" +h:h;
+m=(m<10) ? "0"+m:m;
+s=(s<10) ? "0" +s:s;
+
+hours.innerHTML=h;
+minutes.innerHTML=m;
+seconds.innerHTML=s;
+period.innerHTML=ampm;
+
+};
+setInterval(clock,1000);
+</script>
 </body>
 </html>
