--- a/notes.html
+++ b/notes.html
@@ -12,12 +12,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div class=" clock">
     <span id="hours">00</span>                 
                         <span id="dots">:</span>
                         <span id="minutes">00</span>                    
                             <span id="period">PM</span>
                             <span id="seconds">00</span>
                             <hr>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-6 adiv"><a href="index.html">home section</a></div>
@@ -44,6 +46,9 @@
     <td><a class="ab" href="https://drive.google.com/file/d/1DDV_4KAcGlkuNbJb0_g8b7JOhO_iZlRM/view?usp=drivesdk">download</td>
   </table>
  <style>  
+     .clock{
+         aligin-items:centre;
+     }
    #hours{
             color: red;
             font-size: xx-large;
