--- a/notes.html
+++ b/notes.html
@@ -47,7 +47,7 @@
   </table>
  <style>  
      .clock{
-         aligin-items:centre;
+         aligin:centre;
      }
    #hours{
             color: red;
