--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 </div>
      <div class="box-56"> 
         <h2 class="dep-78">NOTICES</h2>
-<marquee direction="up" scrollamount="4" scrolldelay="5">
- <h6 class="dep-1"><sup class="dep">new</sup> A live clock added in the random notes section</h6>
-    <hr>
+<marquee direction="down" scrollamount="4" scrolldelay="4">
     <h6 class="dep-1"><sup class="dep">new</sup> 12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
   <hr>
   <h6 class="dep-1"><sup class="dep">new</sup>NOW,You can see/download all files/documents/pdf/practical/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
