--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -138,6 +138,9 @@
         .row{
             background-color: brown;
         }
+        th{
+             color: greenyellow;
+        }
     </style>
 </body>
 </html>
