--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -115,7 +115,9 @@
           }
         }
         .row-2{
-            background-color: whitesmoke;
+            background-color: cadetblue;
+    border-radius: 20px;
+
         }
         table th td tr.colsetwidth{
             width: 50%;
@@ -138,8 +140,14 @@
         .row{
             background-color: brown;
         }
+        .row:hover{
+           background-color: azure;
+        }
         th{
              color: greenyellow;
+        }
+        td:hover{
+            background:linear-gradient(52deg,yellow,green,pink,azure,darkorchid)
         }
     </style>
 </body>
