--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -188,6 +188,10 @@
  .row-2{
     background-color:whitesmoke;
  }
+ .row-2{
+    background-color: cadetblue;
+    border-radius: 20px;
+ }
  .nav-link{
     color: darkorange;
  }
@@ -200,6 +204,12 @@
  .rd{
     color: red;
  }
+        th{
+             color: greenyellow;
+        }
+        td:hover{
+            background:linear-gradient(52deg,yellow,green,pink,azure,darkorchid)
+        }
 </style>
 </body>
 </html>
