--- a/index.html
+++ b/index.html
@@ -224,5 +224,9 @@
         color: white;
         font-size: x-large;
       }
+      .box-56{
+        border-radius: 20px;
+        border-top: 20px;
+      }
     </style> 
 </html>
