--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -102,6 +102,8 @@
             background: linear-gradient(-52deg,purple,yellow,darkorchid,darkslategray,white,pink,darkorchid);
             background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
+            margin-right: 10px;
+            margin-left: 10px;
         }  
         @keyframes bg{
           0%{
@@ -117,7 +119,6 @@
         .row-2{
             background-color: cadetblue;
     border-radius: 20px;
-
         }
         table th td tr.colsetwidth{
             width: 50%;
