--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -113,6 +113,8 @@
         background: linear-gradient(-52deg,bisque,yellow,darkslategray,white,pink,darkorange);
             background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
+            margin-right: 10px;
+            margin-left: 10px;
         }  
         @keyframes bg{
           0%{
