--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 </div>
 </body>
 <style>
+
     h1{
         background-color: darkgoldenrod;
     }
@@ -117,6 +118,8 @@
             background: linear-gradient(-52deg,green,yellow,red,darkslategray,white,pink),darkorchid;
             background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
+            margin-right: 10px;
+            margin-left: 10px;
         }  
         @keyframes bg{
           0%{
@@ -227,6 +230,10 @@
       .box-56{
         border-radius: 20px;
         border-top: 20px;
+      }
+      .box-56{
+        margin-right: 20px;
+        margin-left: 20px;
       }
     </style> 
 </html>
