--- a/notes.html
+++ b/notes.html
@@ -52,6 +52,8 @@
         background: linear-gradient(-52deg,green,darkslategray,purple,pink),darkorchid;
             background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
+            margin-right: 10px;
+            margin-left: 10px;
         }  
         @keyframes bg{
           0%{
