--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
       }
       .row-2{
         background-color: grey;
+        border-radius: 1.6cm;
         
       }   
       .tab-content{
         background-color: slategray;
-         
-      }  
+             }  
        #contact{
         color: honeydew;
        }
@@ -216,9 +216,11 @@
         background-color:chartreuse;
         color: azure;
         text-align: center;
+        border-radius: 10px;
       }
       .nav-link{
         color: purple;
+        border-radius: 10px;
       }
       .nav-link:hover{
         color: blanchedalmond;
