--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <style>
 
     h1{
-        background-color: darkgoldenrod;
+        background-color: darkgoldenrod;      
     }
     h4{
         background-color: chartreuse;
@@ -169,8 +169,7 @@
          color: hotpink;
      }
      .row{
-        background-color: white;
-        color: azure;
+       background-color: whitesmoke;
       }
       .row-2{
         background-color: grey;
@@ -236,6 +235,9 @@
       .box-56{
         margin-right: 20px;
         margin-left: 20px;
+      }
+      a{
+        color:yellowgreen;
       }
     </style> 
 </html>
