--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -73,9 +73,12 @@
 </tr>
 <tr>
     <td>1</td>
-    <td>BCA<sup class="dep">1st sem.</sup>Maths practical(<sup class="dep">1sem.2025</sup>)</td>
+    <td>BCA<sup class="dep">1st sem.</sup>Maths practical</td>
     <td><a href="https://drive.google.com/file/d/10ZxCzO0zt5GQfrt6PQMeL9iiur2NRFiu/view?usp=drivesdk">download</a></td>
 </tr>
+<td>2</td>
+<td>BCA<sup class="dep">1st sem</sup>Foundation of computer science(practical)</td>
+<td><a href="https://drive.google.com/file/d/14el89LSU1FHTaPR2YiDzOOGkwndL_Pp_/view?usp=drivesdk">download</a></td>
 </table>
         </div>
         <div id="assignment" class="tab-pane fade">
