--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <hr>
 <h6 class="dep-1"><sup class="dep">new</sup>Complete website and its contents updated</h6>    
 <hr>
+<h6 class="dep-1"><sup class="dep">new</sup>Foundation of cs-1st sem(practical uploaded)</h6>
+<hr>
  </marquee> 
     </div>
      <hr>
