--- a/index.html
+++ b/index.html
@@ -21,12 +21,73 @@
     <h2 class="name">deepak aggarwal</h2>
 </div>
 <hr>
+ <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
+  <hr>  
+<hr>
     <div class="y"> 
     <marquee direction="right" scrollamount="5" scrolldelay="3"> 
         <h2 <style'font-size:100px;'>&#9749;</style>HOME SECTION</h2>     
 </marquee>
 <hr>
+<table class="table-bordered"> 
+  <tr> 
+       <th><a class="tu" href="index.html">home section</a></th> 
+        <th><a class="tu" href="notes.html">random notes</a></th> 
+               <th><a class="tu" href="Squestionpaper.html">School Section</a></th> 
+                 <th><a class="tu" href="Cquestionpaper.html">College Section</a></th>
+             </tr>
+            </table>
+<hr>
+<div class="container-2"> 
+  <div class="row-2">
+      <div class="col"> 
+      <div> 
+  <ul class="nav nav-tabs">    
+          <li class="col-4" class="nav-item"><a class="nav-link" href="#videos" data-bs-toggle="tab">videos</a></li>
+        <li class="col-4" class="nav-item"><a class="nav-link" href="#pages" data-bs-toggle="tab">section details</a></li>
+      <li class="col-4" class="nav-item"><a class="nav-link" href="#contact" data-bs-toggle="tab">contact me</a></li>
+  </ul>
+  <div class="tab-content">
+      <div id="videos" class="active tab-pane fade in active">
+          <iframe width="350px" height="250px" src="https://www.youtube.com/embed/eEUYHmvQG-U" title="new motivational short video || inspiration short video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+      <div id="pages" class="tab-pane fade">      
+          <div class="card-3"> 
+              <div class="card-title">
+                  <h1>home section</h1>
+             <h4>Home section contains three parts:
+              <br>first for videos ,videos will be entertainment,motivational,thought<br>study related<br>second for section details ,which we have already discussed in section details and third for contact ,onecan contact me on whatshap or email
+and you can write your problems ,then i will suggest you</h4>    
+                   <hr>
+              <h1>random notes</h1>
+      <h4> random notes will conatin all general notes  for incresaing knowlege</h4>
+      <hr>
+      <h1>School section</h1>
+        <h4> Scholl section contain two parts:
+          first for notes  and
+          second for all type of question paper related to school</h4>  
+          <hr>
+          <h1>College Section</h1>
+          <h4>College section  conatin four parts:
+              <br> first for notes and second for all type of questions paper and third fot practical and last for assignment </h4>
+  <hr>    
+  </div>
+          </div>
+          </div>
+      <div id="contact" class="tab-pane fade">        
+          <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
+          <hr>
+          <a  href="mailto:deepaksinghal200511@gmail.com" <i class="fa-duotone fa-solid fa-envelope fa-shake"></i><b class="jyoti">contact on mail</b></a>
+         <hr>
+         <a class="problems"  href="https://docs.google.com/document/d/15QSNMr92TIbiLUUsbnFbsUIlPTYeG_eLw_7hRuVbmYo/edit?usp=drivesdk">write yours problems  and i will help you/suggest you</a>
+         <hr> 
+      </div>
+  </div>
 </div>
+</div>
+</div>
+</div>
+<hr>
      <div class="box-56"> 
         <h2 class="dep-78">NOTICES</h2>
 <marquee direction="down" scrollamount="4" scrolldelay="4">
@@ -44,65 +105,7 @@
 <hr>
  </marquee> 
     </div>
-     <hr>
-     <div class="container">
-        <div class="row">
-            <div class="col-6 adiv"><a href="index.html">home section</a></div>
-                <div class="col-6 bdiv"><a href="notes.html">random notes</a></div>
-                    <div class="col-6 cdiv"><a href="Squestionpaper.html">School Section</a></div>
-                    <div class="col-6 ddiv"><a href="Cquestionpaper.html">College Section</a></div>
-                  </div>
-</div>
- <hr>
- <div class="container-2"> 
-    <div class="row-2">
-        <div class="col"> 
-        <div> 
-    <ul class="nav nav-tabs">    
-            <li class="col-4" class="nav-item"><a class="nav-link" href="#videos" data-bs-toggle="tab">videos</a></li>
-          <li class="col-4" class="nav-item"><a class="nav-link" href="#pages" data-bs-toggle="tab">section details</a></li>
-        <li class="col-4" class="nav-item"><a class="nav-link" href="#contact" data-bs-toggle="tab">contact me</a></li>
-    </ul>
-    <div class="tab-content">
-        <div id="videos" class="active tab-pane fade in active">
-            <iframe width="350px" height="250px" src="https://www.youtube.com/embed/eEUYHmvQG-U" title="new motivational short video || inspiration short video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-        <div id="pages" class="tab-pane fade">      
-            <div class="card-3"> 
-                <div class="card-title">
-                    <h1>home section</h1>
-               <h4>Home section contains three parts:
-                <br>first for videos ,videos will be entertainment,motivational,thought<br>study related<br>second for section details ,which we have already discussed in section details and third for contact ,onecan contact me on whatshap or email
-  and you can write your problems ,then i will suggest you</h4>    
-                     <hr>
-                <h1>random notes</h1>
-        <h4> random notes will conatin all general notes  for incresaing knowlege</h4>
-        <hr>
-        <h1>School section</h1>
-          <h4> Scholl section contain two parts:
-            first for notes  and
-            second for all type of question paper related to school</h4>  
-            <hr>
-            <h1>College Section</h1>
-            <h4>College section  conatin four parts:
-                <br> first for notes and second for all type of questions paper and third fot practical and last for assignment </h4>
-    <hr>    
-    </div>
-            </div>
-            </div>
-        <div id="contact" class="tab-pane fade">        
-            <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
-            <hr>
-            <a  href="mailto:deepaksinghal200511@gmail.com" <i class="fa-duotone fa-solid fa-envelope fa-shake"></i><b class="jyoti">contact on mail</b></a>
-           <hr>
-           <a class="problems"  href="https://docs.google.com/document/d/15QSNMr92TIbiLUUsbnFbsUIlPTYeG_eLw_7hRuVbmYo/edit?usp=drivesdk">write yours problems  and i will help you/suggest you</a>
-           <hr> 
-        </div>
-    </div>
-</div>
-</div>
-</div>
-</div>
+    <hr>
 </body>
 <style>
     h1{
@@ -169,9 +172,6 @@
      .name5{
          color: hotpink;
      }
-     .row{
-       background-color: whitesmoke;
-      }
       .row-2{
         background-color: grey;
         border-radius: 1.6cm;
@@ -238,7 +238,21 @@
         margin-left: 20px;
       }
       a{
-        color:yellowgreen;
+        color:black;
       }
+      table th td tr.colsetwidth{
+        width: 50%;
+      }
+      th{
+        background-color: chartreuse;
+        color: black;
+      }
+      tr{
+        color: black;
+      }
+       .tu:hover{
+        color: white;
+       }
+
     </style> 
 </html>
