--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ and you can write your problems ,then i will suggest you</h4>
     }
     .y{
         background-color: blanchedalmond;
+        border-radius: 1cm;
     }
     .name2{
         color: chartreuse;
