--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <hr>
 <table class="table-bordered"> 
   <tr> 
-       <th><a class="tu" href="index.html">home section</a></th> 
-        <th><a class="tu" href="notes.html">random notes</a></th> 
+     <th><a class="tu" href="index.html">home section</a></th> 
+      <th><a class="tu" href="notes.html">random notes</a></th>  
                <th><a class="tu" href="Squestionpaper.html">School Section</a></th> 
                  <th><a class="tu" href="Cquestionpaper.html">College Section</a></th>
              </tr>
@@ -156,8 +156,9 @@ and you can write your problems ,then i will suggest you</h4>
         background-color: white;    
     }
     .y{
-        background-color: blanchedalmond;
+        background-color: darkslategray;
         border-radius: 1cm;
+        color:yellow;
     }
     .name2{
         color: chartreuse;
