--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -129,6 +129,8 @@
     }
     a{
         color: dimgrey;
+        text-decoration: none;
+        text-shadow: 1px 1px purple;
     }
      a:hover{
         color: brown;
