--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@ and you can write your problems ,then i will suggest you</h4>
      .mar{
         color: white;
          background-color:dimgrey;
+       text-shadow: 2px 2px 4px yellowgreen;
        }
     body{
-            background: linear-gradient(-52deg,green,yellow,red,darkslategray,white,pink),darkorchid;
+            background: linear-gradient(52deg,green,yellow,red,darkslategray,white,pink,darkorchid);
             background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
             margin-right: 10px;
@@ -150,19 +151,18 @@ and you can write your problems ,then i will suggest you</h4>
         background-color: black;
         margin-top: 10px;
         margin-left: 26px;
-        background: linear-gradient(to left,black,orange);     
+        background: linear-gradient(to left,black,orange);    
+        text-shadow: 2px 2px green; 
     }      
-    .container{
-        background-color: white;    
-    }
     .y{
-        background-color: darkslategray;
-        border-radius: 1cm;
-        color:yellow;
+      background: linear-gradient(52deg,green,yellow,red,darkslategray,white,pink,darkorchid);
+        border-radius:1cm; 
+        text-shadow: 1px 2px  4px red;    
     }
     .name2{
         color: chartreuse;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        text-shadow: 2px 2px 4px greenyellow;
     }
     .name3{
         color: crimson;
@@ -200,7 +200,10 @@ and you can write your problems ,then i will suggest you</h4>
       }
       p{
         background-color: black;
-      }    
+      }   
+      a{
+        text-decoration: none;
+      } 
       a:hover{
         color:darkslategray;
       }
@@ -255,6 +258,5 @@ and you can write your problems ,then i will suggest you</h4>
        .tu:hover{
         color: white;
        }
-
     </style> 
 </html>
