--- a/notes.html
+++ b/notes.html
@@ -71,6 +71,8 @@
     }
     a{
         color: palevioletred;
+        text-decoration: none;
+        text-shadow: 1px 1px palevioletred;
     }
     a:hover{
         color: chocolate;
