--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -122,6 +122,7 @@
         .row-2{
             background-color: cadetblue;
     border-radius: 20px;
+    text-shadow: 1px 1px 2px darkorange;
         }
         table th td tr.colsetwidth{
             width: 50%;
@@ -143,6 +144,7 @@
         }
         .row{
             background-color: brown;
+            text-shadow: 1px 1px 1px pink;
         }
         .row:hover{
            background-color: azure;
@@ -152,6 +154,10 @@
         }
         td:hover{
             background:linear-gradient(52deg,yellow,green,pink,azure,darkorchid)
+        }
+        a{
+            text-decoration: none;
+            text-shadow: 1px 1px 2px paleturquoise;
         }
     </style>
 </body>
