--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2 <style'font-size:100px;'>&#9749;</style>HOME SECTION</h2>     
 </marquee>
 <hr>
-<table class="table-bordered"> 
+<table> 
   <tr> 
      <th><a class="tu" href="index.html">home section</a></th> 
       <th><a class="tu" href="notes.html">random notes</a></th>  
