--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <marquee class="mar">
         <h2 <style'font-size:100px;'>&#9749;</style>YOU ARE MOST WELCOME TO VISIT ON MY WEBSITE </h2>
     </marquee>
+  </div>
     <hr>  
     <div class="k"> 
     <img class="pic" src="https://i.im.ge/2025/01/19/HMdqRy.1000016724.webp" height="150px" width="150px"> 
@@ -256,6 +257,11 @@ and you can write your problems ,then i will suggest you</h4>
       }
        .tu:hover{
         color: white;
+       }
+       .yupi{
+        height: 90px;
+        width: 100px;
+        border-radius: 10cm;
        }
     </style> 
 </html>
