--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ and you can write your problems ,then i will suggest you</h4>
          background-color:dimgrey;
        text-shadow: 2px 2px 4px yellowgreen;
        }
-    body{
-            background: linear-gradient(52deg,green,yellow,red,darkslategray,white,pink,darkorchid);
+    body{ 
+      background: linear-gradient(52deg,green,yellow,red,darkslategray,white,pink,darkorchid);
             background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
             margin-right: 10px;
@@ -146,6 +146,9 @@ and you can write your problems ,then i will suggest you</h4>
         height: 100px;
         width: 100px;   
     }
+    .pic:hover{
+       mask-image: URL("https://i.im.ge/2025/01/21/HMzJ5y.1000005345.webp");
+    }
     .name{
         color: aliceblue;
         background-color: black;
@@ -153,7 +156,7 @@ and you can write your problems ,then i will suggest you</h4>
         margin-left: 26px;
         background: linear-gradient(to left,black,orange);    
         text-shadow: 2px 2px green; 
-    }      
+    }     
     .y{
       background: linear-gradient(52deg,green,yellow,red,darkslategray,white,pink,darkorchid);
         border-radius:1cm; 
