--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ and you can write your problems ,then i will suggest you</h4>
       background: linear-gradient(52deg,green,yellow,red,darkslategray,white,pink,darkorchid);
         border-radius:1cm; 
         text-shadow: 1px 2px  4px red;    
-    }
+      }
     .name2{
         color: chartreuse;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -212,14 +212,17 @@ and you can write your problems ,then i will suggest you</h4>
       }
       .dep-1{
         color: white;
-        background-color: black;
       }
       .dep{
         color: red;
       }
       .box-56{
-        background-color: black;
+        background-image: URL("https://mastipak.ucoz.net/images/Flowers_wallpaper.jpg");
+        background-repeat: no-repeat;
+        background-size:1900px;
+        background-position: 3%;
       }
+      
       .dep-78{
         background-color:chartreuse;
         color: azure;
