--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -74,27 +74,27 @@
         </tr>
             <tr>
                 <td>1</td>
-                <td>12th-Preboard-question<sup>2025</sup> <br>paper(Medical/Non-medical)</td>
+                <td>12th-Preboard-question<br><sup>2025</sup>paper(Medical/Non-medical)</td>
                 <td> <a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
             </tr>
             <tr> 
                 <td>2</td>
-                <td>12th-Preboard-question<sup>2025</sup><br>paper(Art-History,Political<br>Science,Geography,Finearts)</td>
+                <td>12th-Preboard-question<sup>2025</sup>paper<br>(Art-History,PoliticalScience,<br>Geography,Finearts)</td>
                 <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>12th model paper-2025<br>(Physics,Chemistry,Maths,<br>Biology)</td>
+                    <td>12th model paper2025<br>(Physics,Chemistry<br>,Maths,Biology)</td>
                     <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
                 </tr>
                 <tr> 
                 <td>4</td>
-                <td>12th Modelpaper-2025<br>(history,fine art,geography,<br>political science,)</td>
+                <td>12th Modelpaper-2025<br>(history,fine art,<br>geography,political science,)</td>
                 <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>12th previous year question paper-chemistry<sup class="rd">2024-march</sup></td>
+                <td>12th previous year<br> question paper-<br>chemistry<sup class="rd">2024-march</sup></td>
                 <td><a class="deepak2005" href="https://drive.google.com/file/d/12DdqkGX3EGkuP1H4jRNdmA5jSdRie4Pu/view?usp=drivesdk">download</a></td>
             </tr>
             </table>
@@ -107,10 +107,11 @@
 <style>
     .box{
         height: 250px;
-        width: 350px;
+        width: 250px;
+        border-radius: 10cm;
     }
      body{
-        background: linear-gradient(-52deg,bisque,yellow,darkslategray,white,pink,darkorange);
+        background: linear-gradient(-52deg,bisque,yellow,white,pink,darkorange);
             background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
             margin-right: 10px;
@@ -131,6 +132,7 @@
         color: dimgrey;
         text-decoration: none;
         text-shadow: 1px 1px purple;
+        border-radius: 10cm;
     }
      a:hover{
         color: brown;
@@ -154,14 +156,16 @@
         animation: slide-show 12s infinite;
     }
     .slide-2{
-        animation-delay: 8s;
+        animation-delay: 3s;
     }
     .slide-3{
-        animation-delay: 15s;
+        animation-delay: 3s;
     }
     .slide img{
-        width: 350px;
-        height:250px;   
+        width: 250px;
+        height:250px; 
+          border-radius: 100%;
+          margin-left: 1cm;
     }
     @keyframes slide-show{
         0%{
