--- a/index.html
+++ b/index.html
@@ -146,9 +146,6 @@ and you can write your problems ,then i will suggest you</h4>
         height: 100px;
         width: 100px;   
     }
-    .pic:hover{
-       mask-image: URL("https://i.im.ge/2025/01/21/HMzJ5y.1000005345.webp");
-    }
     .name{
         color: aliceblue;
         background-color: black;
@@ -162,24 +159,10 @@ and you can write your problems ,then i will suggest you</h4>
         border-radius:1cm; 
         text-shadow: 1px 2px  4px red;    
       }
-    .name2{
-        color: chartreuse;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        text-shadow: 2px 2px 4px greenyellow;
-    }
-    .name3{
-        color: crimson;
-    }
-     .name4{
-        font-size: medium;
-        color: cyan;
-     }
-     .name5{
-         color: hotpink;
-     }
+     
       .row-2{
         background-color: grey;
-        border-radius: 1.6cm;
+        border-radius: 20px;
         
       }   
       .tab-content{
