--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@
     <h2 class="name">deepak aggarwal</h2>
 </div>
 <hr>
-<marquee>
-  <a href="https://wa.me/918168173141"><img class="you" src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
-<br>
-  <span>CONTACT</span>
-</marquee> 
-<hr>  
+<a href="https://wa.me/918168173141"><img class="you" src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
+<br><h6>Contact</h6>
 <hr>
     <div class="y"> 
     <marquee direction="right" scrollamount="5" scrolldelay="3"> 
@@ -101,17 +97,17 @@ and you can write your problems ,then i will suggest you</h4>
           </tr>
            
       </div>
+    </table>
   </div>
 </div>
 </div>
 </div>
 </div>
-</table>
 <hr>
-     <div class="box-56"> 
-        <h2 class="dep-78">NOTICES</h2>
+<h2 class="dep-78">NOTICES</h2>
 <marquee direction="down" scrollamount="4" scrolldelay="4">
-    <h6 class="dep-1"><sup class="dep">new</sup>12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
+  <div class="box-56"> 
+  <h6 class="dep-1"><sup class="dep">new</sup>12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
   <hr>
   <h6 class="dep-1"><sup class="dep">new</sup>NOW,You can see/download all files/documents/pdf/practical/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
   <hr>
@@ -122,9 +118,8 @@ and you can write your problems ,then i will suggest you</h4>
 <h6 class="dep-1"><sup class="dep">new</sup>Complete website and its contents updated</h6>    
 <hr>
 <h6 class="dep-1"><sup class="dep">new</sup>Foundation of cs-1st sem(practical uploaded)</h6>
-<hr>
- </marquee> 
-    </div>
+</marquee>
+</div>
     <hr>
 </body>
 <style>
@@ -134,6 +129,10 @@ and you can write your problems ,then i will suggest you</h4>
     .you{
       height: 40px;
       width: 40px;
+      margin-left: 100px;
+    }
+    h6{
+      text-align: center;
     }
     h4{
         background-color: chartreuse;
@@ -225,19 +224,17 @@ and you can write your problems ,then i will suggest you</h4>
       .box-56{
         background-image: URL("https://mastipak.ucoz.net/images/Flowers_wallpaper.jpg");
         background-repeat: no-repeat;
-        background-size:1900px;
-        background-position: 3%;
       }   
       .dep-78{
         background-color:chartreuse;
         color: azure;
         text-align: center;
-        border-radius: 10px;
+        border-radius: 20px;
       }
       img{
         border-radius: 10cm;
-        height: 100px;
-        width: 100px;
+        height: 70px;
+        width: 70px;
       }
       .nav-link{
         color: purple;
