--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
     <h2 class="name">deepak aggarwal</h2>
 </div>
 <hr>
-<a href="https://wa.me/918168173141"><img class="you" src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
-<br><h6>Contact</h6>
-<hr>
     <div class="y"> 
     <marquee direction="right" scrollamount="5" scrolldelay="3"> 
         <h2 <style'font-size:100px;'>&#9749;</style>HOME SECTION</h2>     
@@ -109,7 +106,7 @@ and you can write your problems ,then i will suggest you</h4>
   <div class="box-56"> 
   <h6 class="dep-1"><sup class="dep">new</sup>12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
   <hr>
-  <h6 class="dep-1"><sup class="dep">new</sup>NOW,You can see/download all files/documents/pdf/practical/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
+  <h6 class="dep-1"><sup class="dep">new</sup>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
   <hr>
   <h6 class="dep-1"><sup class="dep">new</sup>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
 <hr>
