--- a/index.html
+++ b/index.html
@@ -92,7 +92,19 @@ and you can write your problems ,then i will suggest you</h4>
             <td>Email</td>
             <td><a href="mailto:deepaksinghal200511@gmail.com"><img src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a> </td>
           </tr>
-           
+          <tr>
+            <td>3</td>
+            <td><img src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg" ></td>
+            <td>instagram/<br>threads</td>
+            <td><a href="https://www.instagram.com/2005deepu2025?igsh=ZjFiYmRrNTVlc3I0"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a></td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>----</td>
+            <td>snapchat</td>
+            <td><a href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://static.vecteezy.com/system/resources/previews/018/930/694/original/snapchat-logo-snapchat-icon-transparent-free-png.png"></a></td>
+            
+          </tr>
       </div>
     </table>
   </div>
