--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ and you can write your problems ,then i will suggest you</h4>
             <td>Whatshap</td>
             <td><a href="https://wa.me/918168173141"><img src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a></td>
           </tr>
-          <tr>
+          <tr class="tr1">
             <td>2</td>
             <td><img src="https://i.im.ge/2025/02/12/HjzV3T.1000020581.png"></td>
             <td>Email</td>
             <td><a href="mailto:deepaksinghal200511@gmail.com"><img src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a> </td>
           </tr>
-          <tr>
+          <tr class="tr1">
             <td>3</td>
             <td><img src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg" ></td>
             <td>instagram/<br>threads</td>
